--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -25,7 +25,7 @@ services:
       placement:
         constraints: [node.role == manager]
   vote:
-    image: jeelan5335/example-voting-app_vote:latest
+    image: dockersamples/examplevotingapp_vote:before
     ports:
       - 5000:80
     networks:
@@ -39,7 +39,7 @@ services:
       restart_policy:
         condition: on-failure
   result:
-    image: jeelan5335/example-voting-app_result:latest
+    image: dockersamples/examplevotingapp_result:before
     ports:
       - 5001:80
     networks:
@@ -55,7 +55,7 @@ services:
         condition: on-failure
 
   worker:
-    image: jeelan5335/example-voting-app_worker:latest
+    image: dockersamples/examplevotingapp_worker
     networks:
       - frontend
       - backend
